update index tml files

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <Address>
             <ul>
                 <Li><a href="mailto:info@devstudio.com">info@devstudio.com</a></Li>
-                <li><a href="+11-000-111-11-11">+11(000)111-11-11</a></li>
+                <li><a href="+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </Address>
     </header>
@@ -28,6 +28,7 @@
             <button type="button">Order Servicev</button>
         </section>
         <section>
+            <h2>About us</h2>
         <ul>
             <li>
                 <h3>Strategy</h3>
