--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <Address>
             <ul>
                 <Li><a href="mailto:info@devstudio.com">info@devstudio.com</a></Li>
-                <li><a href="+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </Address>
     </header>
